# Enterprise-Software-Support-Resolution-Intelligence-System-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
api/: index.py
app/: __init__.py
app/agents/: __init__.py  account_validator_agent.py  doc_retrieval_agent.py  escalation_agent.py  graph.py  incident_investigator_agent.py  response_composer_agent.py  response_validator_agent.py  sql_agent.py
app/api/routes/: auth.py  ingestion.py  jira.py  retrieval.py
app/core/: auth.py  config.py  langfuse.py  logging.py  logging_context.py  semantic_cache.py
app/evaluation/: __init__.py  langfuse_scores.py  llm_judge.py  slo_config.py
app/ingestion/: __init__.py  document_chunker.py  document_loader.py  document_parser.py  embedding_generator.py  image_captioner.py  image_extractor.py  table_extractor.py  table_summarizer.py  text_normalizer.py
app/middleware/: __init__.py  input_guardrails.py  output_guardrails.py  request_logging.py
app/orchestration/: __init__.py  intent_classifier.py  severity_assessor.py  state.py
app/repositories/: __init__.py  document_embedding_repository.py
app/schemas/: __init__.py  ingestion.py  retrieval.py
app/services/: agent_service.py  document_ingestion_service.py  retrieval_service.py
app/services/tools/: __init__.py  email_mcp_tool.py  (+4 more)
scripts/: import_langfuse_dataset.py  run_langfuse_experiment.py
tests/: conftest.py  test_agent_helper_coverage.py  test_chitchat_routing.py  test_guardrails_auth_evaluation.py  test_orchestration_account_jira.py  test_response_composer_quality.py  test_response_validation_thresholds.py  test_retrieval_cache_sql_guardrails.py  test_routes_ingestion_email_helpers.py  test_severity_assessment.py  test_sql_tool_formatting.py
